crates/reap-pm-live/tests/ui/public_route_delivery_cannot_be_forged.stderr
error: cannot construct `PmPublicMetadataDelivery` with struct literal syntax due to private fields
 --> tests/ui/public_route_delivery_cannot_be_forged.rs:5:5
  |
5 |     PmPublicMetadataDelivery { envelope }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^   -------- private field
  |
  = note: ...and other private field `authority_id` that was not provided
help: you might have meant to use the `from_parts` associated function
  |
5 -     PmPublicMetadataDelivery { envelope }
5 +     PmPublicMetadataDelivery::from_parts(_, _)
  |
