crates/reap-pm-live/tests/ui/public_route_delivery_cannot_be_forged.rs
use reap_pm_core::{PmMarketEvent, ReceivedEventEnvelope};
use reap_pm_live::PmPublicMetadataDelivery;

fn forge(envelope: ReceivedEventEnvelope<PmMarketEvent>) -> PmPublicMetadataDelivery {
    PmPublicMetadataDelivery { envelope }
}

fn main() {}
